* UCL Study: clipboard events + entry and text view additional paste events * Readding the file dialog example which mysteriously disappeared
original bzr status:
revno: 3
committer: Steve Dodier-Lazaro <sidnioulz@gmail.com>
branch nick: gtk+3.0-3.14.13
timestamp: Sun 2015-06-07 18:17:03 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gtk+3.0 (3.14.13-0ubuntu1ppa2) vivid; urgency=medium
+
+  * UCL Study: clipboard events + entry and text view additional paste events
+  * Readding the file dialog example which mysteriously disappeared
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Sun, 07 Jun 2015 18:16:22 +0100
+
 gtk+3.0 (3.14.13-0ubuntu1ppa1) vivid; urgency=medium
 
   * UCL study: adding events for open/save and programmatic file access in file dialogs
