--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gtk+3.0 (3.14.13-0ubuntu1ppa4) vivid; urgency=medium
+
+  * Fixing the package dependencies
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Sun, 07 Jun 2015 21:33:04 +0100
+
 gtk+3.0 (3.14.13-0ubuntu1ppa3) vivid; urgency=medium
 
   * UCL Study: proper handling of recent files
