--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gtk+3.0 (3.14.13-0ubuntu1ppa5) vivid; urgency=medium
+
+  * Fixing a read after free error in gtkfilechooser
+  * Letting Zeitgeist apply its own logic to mime type detection
+
+ -- Steve Dodier-Lazaro <sidnioulz@gmail.com>  Fri, 24 Jul 2015 12:41:30 +0100
+
 gtk+3.0 (3.14.13-0ubuntu1ppa4) vivid; urgency=medium
 
   * Fixing the package dependencies
